--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 html {
-  box-shadow: 1px 1px 10px #555;
   margin: auto;
-  max-width: 1200px;
+  max-width: 1100px;
   width: 100%;
   height: auto;
 }
@@ -10,9 +9,8 @@ body {
   margin: 0 0 0 0;
 }
 
-header, footer, #prochainement {
-  @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
-  font-family: "montserrat", "arial", "sans-serif";
+header, footer, h6 {
+  font-family: "Montserrat", sans-serif;
   background-color: #06865c;
   color: yellow;
   display: flex;
@@ -22,28 +20,74 @@ header {
   justify-content: center;
 }
 
-#prochainement {
-  border-radius: 30px;
-  width: 50%;
-  align-items: center;
+main {
+  margin: 15px 50px 55px 50px;
+  padding: 0 35px 35px 35px;
 }
 
 footer {
   position: fixed;
-  justify-content: space-between;
   bottom: 0px;
-  width: 90%;
+  justify-content: space-between;
+  /*width: 75%;
   padding: 25px 25px 25px 25px;
-  margin-right: 35px;
+  margin: 35px 50px 0 50px;*/
 }
 
 section {
   display: flex;
+  justify-content: space-around;
+  align-items: justify;
   flex-direction: column;
-  flex-wrap: wrap;
-  border: 1px solid;
+  flex-wrap: nowrap;
+  margin: 10px 35px 10px 35px;
+}
+
+.ligne1, .ligne2 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+
+.note, .chic, .delice, .palette {
   box-sizing: border-box;
-  width: 40%;
+  width: 35%;
+  height: 400px;
+  text-align: center;
+}
+
+.note a, .chic a, .delice a, .palette a {
+  text-decoration: none;
+}
+
+.note a {
+  color: #3c1218;
+}
+
+.chic h5 a {
+  background: -webkit-linear-gradient(left, #c67412, #a56799, #6e4ccc);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.chic h4 a {
+  color: #c77412;
+}
+
+.delice a {
+  color: #0887fb;
+}
+
+.palette a {
+  color: #72bf56;
+}
+
+.palette h5, .note h5, .chic h5, .delice h5 {
+  font-size: 1.5em;
+}
+
+.palette h4, .note h4, .chic h4, .delice h4 {
+  font-size: 1.7em;
 }
 
 .note {
@@ -52,12 +96,29 @@ section {
   border: #fcdfdb;
 }
 
+.note h5 {
+  font-family: "Devonshire", cursive;
+}
+
+.note h4 {
+  font-family: "Sriracha", cursive;
+}
+
 .chic {
-  @import url("https://fonts.googleapis.com/css2?family=Croissant+One&display=swap");
-  font-family: "croissant+one", "arial", "sans-serif";
-  color: #3c1218;
   background-color: #fff5fe;
   border: #fff5fe;
+}
+
+.chic h5 {
+  font-family: "Croissant One", cursive;
+  background: -webkit-linear-gradient(left, #c67412, #a56799, #6e4ccc);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.chic h4 {
+  color: #c77412;
+  font-family: "Noto Serif", serif;
 }
 
 .delice {
@@ -66,24 +127,71 @@ section {
   border: #f9f9f9;
 }
 
+.delice h5 {
+  font-family: "Dancing Script", cursive;
+}
+
+.delice h4 {
+  font-family: "Kalam", cursive;
+}
+
 .palette {
   color: #72bf56;
   background-color: #fdfffd;
   border: #fdfffd;
 }
 
-.prix {
-  display: flex;
-  flex-wrap: nowrap;
+.palette h5 {
+  font-family: "Kaushan Script", cursive;
 }
 
-.text {
-  color: black;
+.palette h4 {
+  font-family: "Kalam", cursive;
+}
+
+h1, h2, h4, h5 {
+  justify-content: center;
 }
 
 h1 {
   font-weight: bold;
   font-size: 2.5em;
+}
+
+h2 {
+  display: flex;
+}
+
+h4 {
+  display: flex;
+}
+
+h5 {
+  display: flex;
+}
+
+.ligne3 {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ligne3 > h3 {
+  justify-content: center;
+  font-size: 1.8em;
+  font-weight: lighter;
+  color: yellow;
+  border-radius: 10px;
+  background-clip: border-box;
+  background-color: #06865c;
+  padding: 10px 30px 10px 30px;
+}
+
+.menunote, .menuchic, .menudelice, .menupalette {
+  justify-content: center;
+  width: 90%;
+  padding: 20px 20px 20px 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
