--- a/stylenote.css
+++ b/stylenote.css
@@ -1,17 +1,34 @@
-.menu1h {
+.menunote {
+  background-color: #fcdfdb;
   color: #3c1218;
+}
+
+.menu1h {
   font-weight: bold;
   display: flex;
   align-items: center;
-  width: 75%;
 }
 
-.menunote {
-  background-color: #fcdfdb;
-  border: #fcdfdb;
-  border: 1px solid;
-  justify-content: center;
-  width: 75%;
+.menu1s {
+  font-family: "Sriracha", cursive;
+}
+
+.menu1h h5 {
+  font-family: "Devonshire", cursive;
+  font-size: 2.2em;
+  margin: 5px 0 0 0;
+}
+
+.menu1s h5 {
+  font-family: "Devonshire", cursive;
+  font-size: 1.5em;
+}
+
+i {
+  padding: 0 5px 0 5px;
+  background: -webkit-linear-gradient(left, #f15c61, #f6916a);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /*# sourceMappingURL=stylenote.css.map */
