--- a/sass/styledelice.scss
+++ b/sass/styledelice.scss
@@ -1,5 +1,13 @@
 .menudelice {
   background-color: #f9f9f9;
 }
-
+.menu3h h5{
+  font-family: 'Dancing Script', cursive;
+  font-size: 2.2em;
+  margin: 5px 0 0 0;
+}
+.menu3s{
+  font-family: 'Kalam', cursive;
+  margin: 5px 0 0 0;
+}
 /*# sourceMappingURL=styledelice.scss.map */
