--- a/stylepalette.css
+++ b/stylepalette.css
@@ -1,5 +1,22 @@
 .menupalette {
-  background-color: yellow;
+  background-color: #fdfffd;
+}
+
+.menu4h {
+  background: -webkit-linear-gradient(left, #41963c, #b8fa7c);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.menu4h h5 {
+  font-family: "Kaushan Script", cursive;
+  font-size: 2.2em;
+  margin: 5px 0 0 0;
+}
+
+.menu4s {
+  font-family: "Kalam", cursive;
+  margin: 5px 0 0 0;
 }
 
 /*# sourceMappingURL=stylepalette.scss.map */
