responsive ok centré ok reste animations et traits bords h3 menus

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,63 +1,97 @@
-html
-{
-	margin: auto;
-    max-width: 1100px;
-    width: 100%;
-    height: auto;
-}
+$back: rgba(6,134,92);
+$ohmyfood: yellow;
+$note: rgba(60,18,24);
+$degradenote: (left, rgba(241,92,97) ,rgba(246,145,106));
+$backnote: rgba(252,223,219);
+$degradechic: rgba(198,116,18),rgba(165,103,153),rgba(110,76,204);
+$menuchic: rgba(199,116,18);
+$backchic: rgba(255,245,254);
+$degradedelice: (left, rgba(2,59,227) ,rgba(8,137,251));
+$menudelice: rgba(8,137,251);
+$backdelice:#f9f9f9;
+$degradepalette: (left, rgba(65,150,60) ,rgba(184,250,124));
+$menupalette: rgba(114,191,86);
+$backpalette:rgba(253,255,253);
 body{
     margin: 0 0 0 0;
 }
 header, footer, h6{
     font-family: 'Montserrat', sans-serif;
-    background-color: rgba(6,134,92);
-    color: yellow;
+    background-color: $back;
+    color: $ohmyfood;
     display: flex;
 }
 header{
     justify-content: center;
 }    
 main{
-    margin: 15px 50px 55px 50px;
+    box-sizing: 100%;
+    margin: 15px 50px 50px 50px;
     padding: 0 35px 35px 35px;
 }
 footer{        
     position: fixed;
     bottom: 0px;
     justify-content: space-between;
-    /*width: 75%;
-    padding: 25px 25px 25px 25px;
-    margin: 35px 50px 0 50px;*/
+    width: 100%;
 }
-section{
-    display: flex;
-    justify-content: space-around;
-    align-items: justify;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    margin: 10px 35px 10px 35px;
+footer a{
+    padding: 25px 30px 25px 30px;
+    font-size: 1.6em;
 }
-.ligne1, .ligne2{
+h1 a, footer a{
+    color: $ohmyfood;
+}
+.ligne{
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    justify-content: center;
+    margin: 15px 50px 0 50px
 }
 .note, .chic, .delice, .palette{
     box-sizing: border-box;
-    width: 35%;
-    height: 400px;
-    text-align: center;
+    width: 400px;
+    height: 600px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
-.note a, .chic a, .delice a, .palette a{
+.note, .delice{
+    margin: 0 15px 0 0;
+}
+.chic, .palette{
+    margin: 0 0 0 15px;
+}
+.note a, .chic a, .delice a, .palette a, h1 a, footer a{
     text-decoration: none;
 }
+.zoom, h1 a, h1, h2, h4, h5, .ligne3{
+    text-align: center;
+}
+.zoom{
+    &:hover{
+        zoom: 135%;
+    }
+}
 .note a{
-    color: rgba(60,18,24);
+    color: $note;
+}
+.note i{
+    padding: 0 5px 0 5px;
+    background: -webkit-linear-gradient(left, rgba(241,92,97) ,rgba(246,145,106));
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
 }
 .chic h5 a{
     background: -webkit-linear-gradient(left, rgba(198,116,18) ,rgba(165,103,153), rgba(110,76,204));
     -webkit-background-clip: text;
+    -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
 }
 .chic h4 a{
     color: rgba(199,116,18);
@@ -65,19 +99,35 @@ section{
 .delice a{
     color: rgba(8,135,251);
 }
-.palette a{
-    color: rgba(114,191,86);
+.delice h5{
+    background: -webkit-linear-gradient(left, rgba(2,59,227) ,rgba(8,137,251));
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
 }
+.palette a{
+    color: $menupalette;
+}
+.palette h5{
+    background: -webkit-linear-gradient(left, rgba(65,150,60) ,rgba(184,250,124));
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+  }
 .palette h5, .note h5, .chic h5, .delice h5{  
-    font-size: 1.5em;
+    font-size: 1.4em;
 }
 .palette h4, .note h4, .chic h4, .delice h4{  
-    font-size: 1.7em;
+    font-size: 2em;
 }
 .note{
     color: rgba(60,18,24);
     background-color: rgba(252,223,219);
-    border: rgba(252,223,219);
+    &:hover{
+        background: rgba($backnote, 0.5);
+    }
 }
 .note h5{
     font-family: 'Devonshire', cursive;
@@ -86,14 +136,18 @@ section{
     font-family: 'Sriracha', cursive
 }
 .chic{
-    background-color: rgba(255,245,254);
-    border:rgba(255,245,254);
+    background-color: $backchic;
+    &:hover{
+        background: rgba($backchic, 0.5);
+    }
 }
 .chic h5{
     font-family: 'Croissant One', cursive;
     background: -webkit-linear-gradient(left, rgba(198,116,18) ,rgba(165,103,153), rgba(110,76,204));
     -webkit-background-clip: text;
+    -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
 }
 .chic h4{
     color: rgba(199,116,18);
@@ -101,8 +155,10 @@ section{
 }
 .delice{
     color: rgba(8,135,251);
-    background-color: rgba(249,249,249);
-    border:rgba(249,249,249);
+    background-color: $backdelice;
+    &:hover{
+        background: rgba($backdelice, 0.5);
+    }
 }
 .delice h5{
     font-family: 'Dancing Script', cursive;
@@ -111,9 +167,11 @@ section{
     font-family: 'Kalam', cursive;
 }
 .palette{
-    color: rgba(114,191,86);
-    background-color: rgba(253,255,253);
-    border:rgba(253,255,253);
+    color: $menupalette;
+    background-color: $backpalette;
+    &:hover{
+        background: rgba($backpalette, 0.5);
+    }
 }
 .palette h5{
     font-family: 'Kaushan Script', cursive;
@@ -121,46 +179,61 @@ section{
 .palette h4{
         font-family: 'Kalam', cursive; 
 }
-h1, h2, h4, h5{
-    justify-content: center;    
+h1, h2, h4, h5, .ligne3{
+    justify-content: center; 
+    display: flex;   
 }
-h1
-{
+h1 a{
     font-weight: bold;
-    font-size: 2.5em;
+    font-size: 2.2em;
 }
-h2
-{
-    display: flex;
-}
-h4
-{
-    display:flex;
-}
-h5
-{
-    display:flex;
-}
-
 .ligne3
 {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    box-sizing: content-box;
+    width: 30%; 
+    margin: auto;
+    justify-content: center;
 }
 .ligne3>h3{
-    justify-content: center;
-    font-size: 1.8em;
+    font-size: 1.9em;
     font-weight: lighter;
-    color: yellow;
+    color: $ohmyfood;
     border-radius: 10px;
-    background-clip: border-box;
-    background-color: rgba(6,134,92);
+    background-color: $back;
     padding: 10px 30px 10px 30px;
 }
-.menunote, .menuchic, .menudelice, .menupalette{
+.menu1s, .menuchic, .menudelice, .menupalette{
     justify-content: center;
     width: 90%;
-    padding: 20px 20px 20px 20px;
+    padding: 20px 30px 20px 30px;
+}
+p 
+{
+	display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    font-size: 1.3em;
+}
+
+.prix
+{
+	display: flex;		
+	flex-direction: column;
+    width: 20%;
+    align-items: flex-end;
+}
+
+
+@media (max-width: 768px){
+    .ligne{
+        display: flex;
+        flex-direction: column;
+    }
+    .note, .chic, .delice, .palette{
+        margin: 15px 15px 0 15px;
+    }
+    .ligne{
+        margin: 0 0 0 0;
+    }
 }
