--- a/stylechic.css
+++ b/stylechic.css
@@ -13,11 +13,16 @@ h5 {
   font-size: 2.2em;
 }
 
-h3::before, h3::after {
-  content: "";
-  border: 4px solid #0228dd;
-  background: #0228dd;
-  clip-path: polygon(30% 40%, 100% 50%, 30% 60%, 0% 50%);
+h3::before {
+  width: 80px;
+  height: 100px;
+  background-color: #000;
+  border-radius: 50%/60% 60% 40% 40%;
+  /*content: "";
+  background:rgba(2,40,221);
+  width: 500px;
+  height: 500px;
+  clip-path: polygon(81% 98%, 100% 97%, 100% 100%, 51% 100%, 0 100%, 0 97%, 18% 99%);*/
 }
 
 .menu2s {
@@ -37,14 +42,6 @@ h3::before, h3::after {
 .police3 {
   color: #6e4ccc;
   padding: 0 0 0 0;
-}
-
-.prix {
-  text-align: right;
-}
-
-.plat {
-  text-align: left;
 }
 
 /*rgba(198,116,18) ,rgba(165,103,153), rgba(110,76,204)*/
