--- a/sass/styledelice.scss
+++ b/sass/styledelice.scss
@@ -9,5 +9,10 @@
 .menu3s{
   font-family: 'Kalam', cursive;
   margin: 5px 0 0 0;
+  flex-direction: row;
+}
+.prix{
+  display: flex;
+  justify-content: flex-start;
 }
 /*# sourceMappingURL=styledelice.scss.map */
