--- a/styledelice.css
+++ b/styledelice.css
@@ -11,6 +11,12 @@
 .menu3s {
   font-family: "Kalam", cursive;
   margin: 5px 0 0 0;
+  flex-direction: row;
+}
+
+.prix {
+  display: flex;
+  justify-content: flex-start;
 }
 
 /*# sourceMappingURL=styledelice.scss.map */
