--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0 0 0 0;
+  width: 100%;
 }
 
 header, footer, h6 {
@@ -11,10 +12,11 @@ header, footer, h6 {
 
 header {
   justify-content: center;
+  width: 100%;
 }
 
 main {
-  box-sizing: 100%;
+  box-sizing: content-box;
   margin: 15px 50px 50px 50px;
   padding: 0 35px 35px 35px;
 }
@@ -231,12 +233,19 @@ h1 a {
   padding: 20px 30px 20px 30px;
 }
 
-p {
+.menu1s p, .menupalette p, .menudelice p, .menuchic p {
   display: flex;
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
+}
+
+.menu1s p, .menupalette p, .menudelice p {
   font-size: 1.3em;
+}
+
+.menuchic p {
+  font-size: 1.5em;
 }
 
 .prix {
@@ -246,18 +255,49 @@ p {
   align-items: flex-end;
 }
 
+.mention h3 {
+  text-align: justify;
+}
+
+.mention {
+  margin: 10px 5px 60px 5px;
+}
+
 @media (max-width: 768px) {
   .ligne {
     display: flex;
     flex-direction: column;
+    margin: 0 0 0 0;
   }
 
   .note, .chic, .delice, .palette {
     margin: 15px 15px 0 15px;
+    padding: 0 0 0 0;
+    box-sizing: border-box;
+    width: auto;
   }
 
-  .ligne {
-    margin: 0 0 0 0;
+  .palette a, .note a, .chic a, .delice a {
+    font-size: 1.2em;
+  }
+
+  main {
+    margin: 10px 5px 60px 5px;
+  }
+
+  .menu1s, .menuchic, .menudelice, .menupalette {
+    justify-content: center;
+    margin: 10px 10px 80px 10px;
+    padding: 0 0 10px 0;
+    width: auto;
+  }
+
+  .menu1s p, .menudelice p, .menupalette p {
+    font-size: 1.1em;
+  }
+
+  h1 a {
+    font-size: 1.8em;
   }
 }
 
