--- a/stylenote.css
+++ b/stylenote.css
@@ -33,4 +33,8 @@ i {
   -webkit-text-fill-color: transparent;
 }
 
+.plat i {
+  padding: 0 5px 0 5px;
+}
+
 /*# sourceMappingURL=stylenote.css.map */
