--- a/sass/style.scss
+++ b/sass/style.scss
@@ -102,7 +102,7 @@ h1 a, footer a{
     color: rgba(8,135,251);
 }
 .delice h5{
-    background: -webkit-linear-gradient(left, rgba(2,59,227) ,rgba(8,137,251));
+    background: -webkit-linear-gradient(left, rgba(0,35,219) ,rgba(8,126,248));
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -209,18 +209,22 @@ h1 a{
     width: 90%;
     padding: 20px 30px 20px 30px;
 }
-.menu1s p, .menupalette p, .menudelice p, .menuchic p{
+.menu1h h5, .menu2h h5, .menu3h h5, .menu4h h5{
+    font-size: 2.2em;
+    margin: 5px 0 0 0;
+}
+.menu1s, .menu2s, .menu3s, .menu4s{
+    margin: 5px 0 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+p{
 	display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: space-between;
-    
-}
-.menu1s p, .menupalette p, .menudelice p{
-    font-size: 1.3em;
-}
-.menuchic p{
-    font-size: 1.5em;
+    font-size: 1.3em;    
 }
 .prix
 {
@@ -260,7 +264,7 @@ h1 a{
         padding: 0 0 10px 0;
         width: auto;
     }    
-    .menu1s p, .menudelice p, .menupalette p{
+    p{
         font-size: 1.1em;
     }
     h1 a{
