--- a/sass/stylechic.scss
+++ b/sass/stylechic.scss
@@ -2,15 +2,16 @@
 {
     background-color: rgba(255,245,254);
 }
-h5{
-    font-family: 'Croissant One', cursive;
+.menu2h{
     background: -webkit-linear-gradient(left, rgba(198,116,18) ,rgba(165,103,153), rgba(110,76,204));
     background: -moz-linear-gradient(left, rgba(198,116,18) ,rgba(165,103,153), rgba(110,76,204));
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
-    font-size: 2.2em;
+}
+.menu2h h5{  
+    font-family: 'Croissant One', cursive;  
 }
 /*h3::before{
     width: 80px;
@@ -39,9 +40,3 @@ h5{
     color: rgba(110,76,204);
     padding: 0 0 0 0;
 }
-/*rgba(198,116,18) ,rgba(165,103,153), rgba(110,76,204)*/
-/*@media (max-width: 768px) {
-    .menuchic p{
-      font-size: 5em;
-    }
-}*/
