--- a/stylechic.css
+++ b/stylechic.css
@@ -2,15 +2,17 @@
   background-color: #fff5fe;
 }
 
-h5 {
-  font-family: "Croissant One", cursive;
+.menu2h {
   background: -webkit-linear-gradient(left, #c67412, #a56799, #6e4ccc);
   background: -moz-linear-gradient(left, #c67412, #a56799, #6e4ccc);
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
-  font-size: 2.2em;
+}
+
+.menu2h h5 {
+  font-family: "Croissant One", cursive;
 }
 
 /*h3::before{
@@ -42,12 +44,5 @@ h5 {
   color: #6e4ccc;
   padding: 0 0 0 0;
 }
-
-/*rgba(198,116,18) ,rgba(165,103,153), rgba(110,76,204)*/
-/*@media (max-width: 768px) {
-    .menuchic p{
-      font-size: 5em;
-    }
-}*/
 
 /*# sourceMappingURL=stylechic.css.map */
