--- a/styledelice.css
+++ b/styledelice.css
@@ -3,20 +3,19 @@
 }
 
 .menu3h h5 {
+  background: -webkit-linear-gradient(left, #0023db, #087ef8);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+.menu3h h5 {
   font-family: "Dancing Script", cursive;
-  font-size: 2.2em;
-  margin: 5px 0 0 0;
 }
 
 .menu3s {
   font-family: "Kalam", cursive;
-  margin: 5px 0 0 0;
-  flex-direction: row;
-}
-
-.prix {
-  display: flex;
-  justify-content: flex-start;
 }
 
 /*# sourceMappingURL=styledelice.scss.map */
